--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   </head>
   <body>
     <section class="container">
-      <div class="modern luxury travel">
+      <ul class="modern luxury travel">
       <h1>Modern luxury <span class="emphasis">travel</span></h1>
-    </div>
-      <div class="preview baku">
-        <h1>Baku</h1>
-      </div>
-      <div class="preview london">
-        <h1>London</h1>
-      </div>
-      <div class="preview madrid">
-        <h1>Madrid</h1>
-      </div>
-      <div class="preview rome">
-        <h1>Rome</h1>
-      </div>
+    </ul>
+      <li class="preview baku">
+        <h2>Baku</h2>
+      </li>
+      <li class="preview london">
+        <h2>London</h2>
+      </li>
+      <li class="preview madrid">
+        <h2>Madrid</h2>
+      </li>
+      <li class="preview rome">
+        <h2>Rome</h2>
+      </li>
     </section>
   </body>
 </html>
